fix accordion border radius to allow better focus ring visibility

--- a/src/scss/components/_collapsible.scss
+++ b/src/scss/components/_collapsible.scss
@@ -27,7 +27,6 @@
     border: none;
     color: $collapsible-trigger-color;
     background: $collapsible-trigger-bg;
-    padding: $collapsible-trigger-padding;
     margin: 0;
     font-size: $collapsible-trigger-font-size;
 
